--- a/src/main/java/org/blackcoffeecoding/notification/index.html
+++ b/src/main/java/org/blackcoffeecoding/notification/index.html
@@ -1,85 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>WebSocket Personal Demo</title>
+    <title>Система уведомлений</title>
     <style>
-        body { font-family: sans-serif; padding: 20px; }
-        #messages { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: scroll; margin-top: 10px; }
-        .log { color: gray; font-size: 0.8em; }
-        .msg { color: blue; font-weight: bold; }
-        .private { color: crimson; font-weight: bold; border: 1px solid red; padding: 2px; }
-        #status { font-weight: bold; }
-        .controls { margin-bottom: 10px; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f4f9; padding: 20px; }
+        .container { max-width: 600px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        h2 { text-align: center; color: #333; }
+        #status { text-align: center; margin-bottom: 20px; font-weight: bold; color: #dc3545; }
+
+        /* Стили уведомлений */
+        .notification { padding: 15px; margin-bottom: 10px; border-left: 5px solid; border-radius: 4px; animation: slideIn 0.5s ease-out; }
+        .verdict-TOP_DEVICE { background-color: #d4edda; border-color: #28a745; color: #155724; }
+        .verdict-AVERAGE { background-color: #fff3cd; border-color: #ffc107; color: #856404; }
+        .verdict-BAD { background-color: #f8d7da; border-color: #dc3545; color: #721c24; }
+
+        @keyframes slideIn { from { transform: translateX(100%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
     </style>
 </head>
 <body>
-<h2>Private Notifications (Port 8086)</h2>
-
-<div class="controls">
-    <label>Представьтесь (UserID): <input type="text" id="userIdInput" value="user1"></label>
-    <button onclick="connect()">Подключиться</button>
-    <button onclick="disconnect()">Отключиться</button>
+<div class="container">
+    <h2>Центр уведомлений (Devices)</h2>
+    <div id="status">Отключено</div>
+    <div id="notifications-area"></div>
 </div>
-
-<div id="status">Status: Disconnected</div>
-<div id="messages"></div>
 
 <script>
     const statusDiv = document.getElementById('status');
-    const messagesDiv = document.getElementById('messages');
-    let socket = null;
-    let pingInterval = null;
+    const area = document.getElementById('notifications-area');
+    let socket;
+    let pingInterval;
 
     function connect() {
-        if (socket && socket.readyState === WebSocket.OPEN) {
-            log("Уже подключены!");
-            return;
-        }
+        // Подключаемся к порту 8083
+        socket = new WebSocket('ws://localhost:8083/ws/notifications');
 
-        const userId = document.getElementById('userIdInput').value;
-        if (!userId) {
-            alert("Введите UserID!");
-            return;
-        }
-
-        // ЗАДАНИЕ 2: Передаем userId в URL
-        socket = new WebSocket(`ws://localhost:8086/ws/notifications?userId=${userId}`);
-
-        socket.onopen = function() {
-            statusDiv.textContent = `Status: Connected as ${userId}`;
-            statusDiv.style.color = 'green';
-            log('Соединение установлено');
-
-            // ЗАДАНИЕ 1: Запуск PING каждые 10 сек
+        socket.onopen = () => {
+            statusDiv.innerText = 'Подключено к системе событий';
+            statusDiv.style.color = '#28a745';
+            // ЗАПУСКАЕМ ПИНГЕР
             startPing();
         };
 
-        socket.onmessage = function(event) {
-            // Игнорируем PONG в визуальном чате (или логируем тихо)
+        socket.onmessage = (event) => {
+            // 1. Проверяем, не техническое ли это сообщение
             if (event.data === "PONG") {
-                console.log("Server: PONG (Connection is alive)");
-                return;
+                console.log("Server: PONG (Connection alive)");
+                return; // Не пытаемся парсить JSON
             }
-            log('Получено: ' + event.data, 'msg');
+
+            // 2. Обрабатываем полезную нагрузку
+            try {
+                const data = JSON.parse(event.data);
+                console.log("Получено событие:", data);
+
+                if (data.type === 'RATING_UPDATE') {
+                    showNotification(data);
+                }
+            } catch (e) {
+                console.error("Ошибка парсинга JSON:", event.data);
+                // Если пришло просто текстовое сообщение (например, через broadcast ручной)
+                if (typeof event.data === "string") {
+                    showSimpleMessage(event.data);
+                }
+            }
         };
 
-        socket.onclose = function(event) {
-            statusDiv.textContent = 'Status: Disconnected';
-            statusDiv.style.color = 'red';
-            log('Отключение.');
-            stopPing();
+        socket.onclose = () => {
+            statusDiv.innerText = 'Соединение разорвано. Переподключение...';
+            statusDiv.style.color = '#dc3545';
+            stopPing(); // Останавливаем пингер
+            setTimeout(connect, 3000);
         };
-
-        socket.onerror = function(err) { log('Ошибка соединения'); };
     }
 
-    function disconnect() {
-        if (socket) socket.close();
-    }
-
+    // --- Логика Ping/Pong ---
     function startPing() {
-        // Шлем PING каждые 10 секунд
+        // Каждые 10 секунд шлем PING
         pingInterval = setInterval(() => {
             if (socket.readyState === WebSocket.OPEN) {
                 console.log("Client: PING");
@@ -91,14 +88,31 @@
     function stopPing() {
         if (pingInterval) clearInterval(pingInterval);
     }
+    // ------------------------
 
-    function log(text, type = 'log') {
+    function showNotification(data) {
         const div = document.createElement('div');
-        div.className = type;
-        div.textContent = `[${new Date().toLocaleTimeString()}] ${text}`;
-        messagesDiv.appendChild(div);
-        messagesDiv.scrollTop = messagesDiv.scrollHeight;
+        // Защита от пробелов в классе
+        const cssClass = data.verdict ? data.verdict.replace(' ', '_') : 'AVERAGE';
+        div.className = `notification verdict-${cssClass}`;
+
+        div.innerHTML = `
+            <strong>Устройство ID: ${data.userId}</strong><br>
+            Рейтинг рассчитан: <b>${data.score}</b><br>
+            Вердикт: ${data.verdict}
+        `;
+        area.prepend(div);
     }
+
+    // На случай ручных тестов через Postman (plain text)
+    function showSimpleMessage(msg) {
+        const div = document.createElement('div');
+        div.className = `notification verdict-AVERAGE`;
+        div.innerHTML = `<b>Сообщение администратора:</b><br>${msg}`;
+        area.prepend(div);
+    }
+
+    connect();
 </script>
 </body>
 </html>
